--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,10 @@
-#Hello text
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>My Webpage</title>
+</head>
+<body>
+	Hello, world!Hello world!
+</body>
+</html>
